@@ -7,6 +7,8 @@ ibus-hangul (1.3.2-0.1) unstable; urgency=low
     - Add myself to Uploaders list
   * debian/watch:
     - Corrected using googlecode.debian.net redirector
+  * debian/rules:
+    - Use debhelper7 style build rules
 
  -- Changwoo Ryu <cwryu@debian.org>  Sun, 01 Jan 2012 00:25:29 +0900
 
